feat: modular app changes.