@@ -7,16 +7,22 @@ import java.util.ArrayList;
 import java.util.Objects;
 import java.util.Scanner;
 
-public class SerialGenerator {
+public final class SerialGenerator {
+
+    private SerialGenerator() {
+        throw new AssertionError("Utility class");
+    }
 
     private static ArrayList<String> getMBoardSerial() throws IOException {
-        ArrayList<String> MBoardSerial = new ArrayList<>();
-        Runtime runtime = Runtime.getRuntime();
+        ArrayList<String> mBoardSerial = new ArrayList<>();
+
         Process process;
         try {
-            process = runtime.exec(new String[]{"wmic", "baseboard", "get", "serialnumber"});
+            process = Runtime.getRuntime().exec(
+                    new String[]{"wmic", "baseboard", "get", "serialnumber"}
+            );
         } catch (IOException ignored) {
-            return MBoardSerial;
+            return mBoardSerial;
         }
 
         OutputStream os = process.getOutputStream();
@@ -27,24 +33,31 @@ public class SerialGenerator {
                 os.close();
             } catch (IOException ignored) {
             }
+
             try (Scanner sc = new Scanner(is)) {
-                sc.nextLine();
-                while (sc.hasNext()) {
-                    String serial = sc.nextLine().trim().replace("\n", "");
-                    if (serial.isEmpty())
-                        continue;
-                    MBoardSerial.add(serial);
+                if (sc.hasNextLine()) {
+                    sc.nextLine();
+                }
+
+                while (sc.hasNextLine()) {
+                    String serial = sc.nextLine().trim();
+
+                    if (!serial.isEmpty()) {
+                        mBoardSerial.add(serial);
+                    }
                 }
             }
         }
-        return MBoardSerial;
+
+        return mBoardSerial;
     }
 
     private static String getDiskSerial() throws IOException {
-        Runtime runtime = Runtime.getRuntime();
         Process process;
         try {
-            process = runtime.exec(new String[]{"wmic", "diskdrive", "get", "serialnumber"});
+            process = Runtime.getRuntime().exec(
+                    new String[]{"wmic", "diskdrive", "get", "serialnumber"}
+            );
         } catch (IOException ignored) {
             return null;
         }
@@ -57,25 +70,39 @@ public class SerialGenerator {
                 os.close();
             } catch (IOException ignored) {
             }
+
             try (Scanner sc = new Scanner(is)) {
-                sc.nextLine();
-                while (sc.hasNext()) {
-                    String serial = sc.nextLine().trim().replace("\n", "");
-                    if (serial.isEmpty())
-                        continue;
-                    return serial;
+                if (sc.hasNextLine()) {
+                    sc.nextLine();
+                }
+
+                while (sc.hasNextLine()) {
+                    String serial = sc.nextLine().trim();
+
+                    if (!serial.isEmpty()) {
+                        return serial;
+                    }
                 }
             }
         }
+
         return null;
     }
 
     private static ArrayList<String> getGPUSerial() throws IOException {
         ArrayList<String> gpuSerial = new ArrayList<>();
-        Runtime runtime = Runtime.getRuntime();
+
         Process process;
         try {
-            process = runtime.exec(new String[]{"wmic", "PATH", "Win32_VideoController", "GET", "PNPDeviceID"});
+            process = Runtime.getRuntime().exec(
+                    new String[]{
+                            "wmic",
+                            "PATH",
+                            "Win32_VideoController",
+                            "GET",
+                            "PNPDeviceID"
+                    }
+            );
         } catch (IOException ignored) {
             return gpuSerial;
         }
@@ -88,53 +115,71 @@ public class SerialGenerator {
                 os.close();
             } catch (IOException ignored) {
             }
+
             try (Scanner sc = new Scanner(is)) {
-                sc.nextLine();
-                while (sc.hasNext()) {
-                    String serial = sc.nextLine().trim().replace("\n", "");
-                    if (serial.isEmpty())
+                if (sc.hasNextLine()) {
+                    sc.nextLine();
+                }
+
+                while (sc.hasNextLine()) {
+                    String serial = sc.nextLine().trim();
+
+                    if (serial.isEmpty()) {
                         continue;
-                    gpuSerial.add(serial.substring(serial.indexOf('\\') + 1));
+                    }
+
+                    int separatorIndex = serial.indexOf('\\');
+
+                    gpuSerial.add(
+                            separatorIndex >= 0
+                                    ? serial.substring(separatorIndex + 1)
+                                    : serial
+                    );
                 }
             }
         }
+
         return gpuSerial;
     }
 
     private static String getCPUSerial() throws IOException {
-        String cpuSerial = null;
-        Runtime runtime = Runtime.getRuntime();
         Process process;
         try {
-            process = runtime.exec(new String[]{"wmic", "cpu", "get", "ProcessorId"});
+            process = Runtime.getRuntime().exec(
+                    new String[]{"wmic", "cpu", "get", "ProcessorId"}
+            );
         } catch (IOException ignored) {
             return null;
         }
-        InputStream is = process.getInputStream();
 
-        try (is) {
-            try (Scanner sc = new Scanner(is)) {
-                while (sc.hasNext()) {
-                    try {
-                        String next = sc.next();
-                        if ("ProcessorId".equals(next)) {
-                            cpuSerial = sc.next().trim();
-                            break;
-                        }
-                    } catch (java.util.NoSuchElementException e) {
-                        return null;
-                    }
+        try (InputStream is = process.getInputStream();
+             Scanner sc = new Scanner(is)) {
+
+            while (sc.hasNext()) {
+                String next = sc.next();
+
+                if ("ProcessorId".equals(next) && sc.hasNext()) {
+                    return sc.next().trim();
                 }
             }
         }
-        return cpuSerial;
+
+        return null;
     }
 
     public static String getSerialNumber() throws IOException {
         String cpuSerial = getCPUSerial();
         ArrayList<String> gpuSerial = getGPUSerial();
-        String hddSerial = getDiskSerial();
+        String diskSerial = getDiskSerial();
         ArrayList<String> mBoardSerial = getMBoardSerial();
-        return String.valueOf(Objects.hash(cpuSerial, gpuSerial, hddSerial, mBoardSerial));
+
+        return String.valueOf(
+                Objects.hash(
+                        cpuSerial,
+                        gpuSerial,
+                        diskSerial,
+                        mBoardSerial
+                )
+        );
     }
 }
